# snowbridge

./: .gitignore  .gitleaks-baseline.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LESSONSLEARNED.md  LICENSE  README.md  REFS-PUBLIC.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
config/: auto-pass.example.ini  downstream-repos.toml
config/clockwork/: filebrowser-backend-watch.toml.template  share-bind-mount-watch.toml.template  wireguard-endpoint-monitor.toml.template
config/network/: networkmanager-static-ip.example.sh
config/samba/: smb.conf.example
config/share-layout/: folders.example.ini
config/tachometer/: profile.toml
docs/: access-patterns.md  contributor-architecture-blueprint.md  filebrowser-directory-size-plan.md  host-setup.md  iphone-shortcut.md
scripts/: build_filebrowser_fork_image.sh  check_filebrowser_backend.sh  check_share_bind_mounts.sh  check_wireguard_endpoint.py  debug_private_access.sh  deploy_filebrowser_fork_image.sh  export_caddy_mtls_profile.py  export_caddy_root_profile.py  nordvpn_rotate.sh  recover_setup_share.sh  remount_luks_share.sh  repair_share_access.sh  setup_bind_share.py  setup_caddy_filebrowser.sh  setup_filebrowser_access.py  setup_filebrowser_backend_watch.sh  setup_filebrowser_fork_workspace.sh  setup_share_bind_mount_watch.sh  setup_wireguard.sh  setup_wireguard_endpoint_monitor.sh  start_snowbridge.sh
tests/: test_check_wireguard_endpoint.py  test_setup_bind_share.py  test_setup_filebrowser_access.py
(+19 files in other folders)
